--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         },
 
         //Display 'Failed to call FHIR Service' if extractData failed
-        function() {
+        function(e) {
+          console.log(e);
           $('#loading').hide();
           $('#errors').html('<p> Failed to call FHIR Service </p>');
         }
